# repo-sentinel

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTEXTS_AND_PLAN.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: README.md  architecture.md  commands.md
src/repo_sentinel/: __init__.py  __main__.py  cli.py
src/repo_sentinel/core/: audit.py  config.py  gitignore.py  protect.py  registry.py  repo_key.py  scanner.py  subscriptions.py  sync.py  tracking.py  vault.py
src/repo_sentinel/gui/: __init__.py
src/repo_sentinel/tui/: app.py  paths.py  screens.py  styles.tcss  suggester.py
tests/: conftest.py  test_audit.py  test_gitignore.py  test_protect.py  test_registry.py  test_repo_key.py  test_scanner.py  test_subscriptions.py  test_sync.py  test_tracking.py  test_tui_app.py  test_tui_paths.py  test_tui_suggester.py  test_vault.py
