[project]
name = "repo-sentinel"
version = "0.1.0"
description = "PC 전역의 git 저장소를 중앙 목록화하고 민감 파일을 vault로 격리·동기화하는 CLI/TUI 도구"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Routhern", email = "ljh93420@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "rich>=15.0.0",
    "textual>=8.2.8",
    "typer>=0.26.8",
]

[project.scripts]
repo-sentinel = "repo_sentinel:main"

[build-system]
requires = ["uv_build>=0.11.25,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
